--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2></h2>
         <div  class="menucompleto">
         <!-- =======bebidas ======= -->
-        <img src="assets/img/menu/2021 Menú Bar Mayo-3_page-0001.jpg" alt="" width="100%" height="100%">
+        <img src="assets/img/menu/menubar.jpg" alt="" width="100%" height="100%">
         <p></p>
 
        </div>
