--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <li><a href="#menu">Bebidas</a></li>
           <!-- <li><a href="#specials">Menú</a></li>
           <li><a href="#events">Noble Camino</a></li>
-          <li><a href="#gallery">Galeria</a></li>
-          <li><a href="#comunidad">Comunidad</a></li>-->
+          <li><a href="#gallery">Galeria</a></li>-->
+          <li><a href="#promociones">Promociones</a></li>
           <li class="book-a-table text-center"><a href="#book-a-table">contáctanos</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -104,8 +104,6 @@
           <div class="menu section-bg" data-aos="zoom-in" data-aos-delay="100">
             <div class="">
               <img src="assets/img/menu/PLR-Promo.png" alt="" width="100%" height="100%">
-              
-
               <img src="assets/img/menu/PLR-Promo-cubeta.png" alt="" width="100%" height="100%">
             </div>
           </div>
@@ -140,17 +138,31 @@
         <!-- =======bebidas ======= -->
         <img src="assets/img/menu/menubar.jpg" alt="" width="100%" height="100%">
         <p></p>
-
        </div>
       </div>
     </div>
-    <div class="container d-flex align-items-center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/uPkyflYb3KA?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+
   </section><!-- End Menu BEBIDAS Section -->
 
 
+ <!-- ======= Menu PROMOCIONES Section ======= -->
+ <section id="promociones" class="menu section-bg">
+  <div class="container" data-aos="fade-up">
 
+    <div class="section-title">
+      <h2></h2>
+      <div  class="menucompleto">
+      <!-- =======bebidas ======= -->
+      <img src="assets/img/menu/PLR-Promo-cubeta.png" alt="" width="100%" height="100%">
+      <img src="assets/img/menu/PLR-Promo.png" alt="" width="100%" height="100%">
+      <p></p>
+     </div>
+    </div>
+  </div>
+  <div class="container d-flex align-items-center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uPkyflYb3KA?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</section><!-- End Menu BEBIDAS Section -->
 
 
 
