--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h2></h2>
         <div  class="menucompleto">
         <!-- =======bebidas ======= -->
-        <img src="assets/img/menu/parasoñar.png" alt="" width="100%" height="100%">
+        <img src="assets/img/gallery/PSoñar-foto-02.png" alt="" width="100%" height="100%">
         <img src="assets/img/menu/menubar.jpg" alt="" width="100%" height="100%">
         <p></p>
        </div>
